class Electrostatic():
    rcutoff = 1.0e0

class ForceField(Electrostatic):

    def __init__(self, rcutoff):
        self.rcutoff = rcutoff